키워드 중심으로 보험찾기

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -8,7 +8,6 @@
 
 	<!-- Template global css file. Requared all pages -->
 	<link rel="stylesheet" type="text/css" href="css/global.style.css">
-	<style> body {background-color: rgb(228,213,196); }</style>
 </head>
 
 <body>
@@ -37,7 +36,7 @@
 
 							<p>미리 입력한 반려견 / 반려묘의 정보를 바탕으로 펫보험을 추천받아보세요!!</p>
 
-							<div><a href="signup.html" class= "more-btn">나에게 맞는 펫보험 추천받기</a></div>
+							<div><a href="insuranceByKeyword" class= "more-btn">나에게 맞는 펫보험 추천받기</a></div>
 				
 						</div>
 					</div>
