--- a/views/insuranceByKeyword.ejs
+++ b/views/insuranceByKeyword.ejs
@@ -39,7 +39,7 @@
 						<div class="filter-links filterable-nav">
 							<strong>Select Category: </strong>
 							<a href="#" class="current wow fadeInRight" data-filter="*">전체</a>
-							<a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a">가장 싼</a>
+							<a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a" color = .red>가장 싼</a>
 							<a href="#" class="wow fadeInRight" data-wow-delay=".4s" data-filter=".b">동물 미 등록</a>
 							<a href="#" class="wow fadeInRight" data-wow-delay=".6s" data-filter=".c">장례비 지원</a>
 						</div>
@@ -54,7 +54,8 @@
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">See details</a>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>
 								</div>
 							</div>
 
@@ -67,7 +68,8 @@
 									<p>치료비(통원) 15만원</p>
 									<p>배상책임 500만원</p>
 									<p>사망시위로금 15만원</p>
-									<a href="#" class="button">See details</a>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>
 								</div>
 							</div>
 
@@ -79,7 +81,8 @@
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">See details</a>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>
 								</div>
 							</div>
 
@@ -91,7 +94,8 @@
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">See details</a>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>
 								</div>
 							</div>
 
@@ -103,7 +107,8 @@
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">See details</a>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>
 								</div>
 							</div>
 
@@ -115,7 +120,8 @@
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">See details</a>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>
 								</div>
 							</div>
 
@@ -126,7 +132,8 @@
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(입원) 10만원</p>
 									<p>장례비지원비 15만원</p>
-									<a href="#" class="button">See details</a>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>
 								</div>
 							</div>
 
@@ -138,8 +145,9 @@
 									<p>치료비(입원) 10만원</p>
 									<p>배상책임 500만원</p>
 									<p>장례비지원비 15만원</p>
-									<a href="#" class="button">See details</a>
-								</div>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>
+									</div>
 							</div>
 
 							<div class="insurance-item filterable-item b">
@@ -150,7 +158,8 @@
 									<p>애견장례비 15만원</p>
 									<p>치료비(수술) 150만원</p>
 									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">See details</a>
+									<a href="#" class="button">자세히</a>
+									<a href="#" class="button">가입</a>	
 								</div>
 							</div>
 						</div>
