--- a/views/main.ejs
+++ b/views/main.ejs
@@ -36,7 +36,7 @@
 
 							<p>미리 입력한 반려견 / 반려묘의 정보를 바탕으로 펫보험을 추천받아보세요!!</p>
 
-							<div><a href="insuranceByKeyword" class= "more-btn">나에게 맞는 펫보험 추천받기</a></div>
+							<div><a href="insuranceByCollaborativeFiltering" class= "more-btn">나에게 맞는 펫보험 추천받기</a></div>
 				
 						</div>
 					</div>
