collaborative filtering을 통해 나온 결과값 post로 넘겨주기 완성

--- a/views/insuranceByCollaborativeFiltering.ejs
+++ b/views/insuranceByCollaborativeFiltering.ejs
@@ -83,3 +83,13 @@
     </div>
 
 </section>
+
+<script>
+    $.ajax({
+        url: "/insuranceByCollaborativeFiltering",
+        type: "POST",
+        success: function (data) {
+            console.log(data);
+        }
+    });
+</script>
