--- a/views/insuranceByKeyword.ejs
+++ b/views/insuranceByKeyword.ejs
@@ -38,8 +38,8 @@
 
 						<div class="filter-links filterable-nav">
 							<strong>Select Category: </strong>
-							<a href="#" class="current wow fadeInRight" data-filter="*">전체</a>
-							<a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a" color = .red>가장 싼</a>
+							<a href="#" class="current wow fadeInRight" data-filter="*" >전체</a>
+							<a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a">가장 싼</a>
 							<a href="#" class="wow fadeInRight" data-wow-delay=".4s" data-filter=".b">동물 미 등록</a>
 							<a href="#" class="wow fadeInRight" data-wow-delay=".6s" data-filter=".c">장례비 지원</a>
 						</div>
