배경화면과 hover를 응용한 font 애니메이션 완성

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,58 +2,61 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-	<title>추천 받기 데모</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+    <title>추천 받기 데모</title>
 
-	<!-- Template global css file. Requared all pages -->
-	<link rel="stylesheet" type="text/css" href="css/global.style.css">
+    <!-- Template global css file. Requared all pages -->
+    <link rel="stylesheet" type="text/css" href="css/global.style.css">
 </head>
 
 <body>
-	<div class="wrapper">
-		<div class="wrapper-inline">
-			<!-- Header area start -->
-			<header> <!-- extra class no-background -->
-				<a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
-				<h1 class="page-title">댕냥댕냥</h1>
-			</header>
-			<!-- Header area end -->
-			<!-- Page content start -->
-			<main class="wizard-page">
-				
-				<div class="wizard">
-					<div class="wizard-item"> 
-						<div class="wizard-content">
+    <div class="wrapper">
+        <div class="wrapper-inline">
+            <!-- Header area start -->
+            <header>
+                <!-- extra class no-background -->
+                <a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
+                <h1 class="page-title">댕냥댕냥</h1>
+            </header>
+            <!-- Header area end -->
+            <!-- Page content start -->
+            <main class="wizard-page">
 
-							<div class="form-divider"></div>
+                <div class="wizard">
+                    <div class="wizard-item">
+                        <div class="wizard-content">
 
-							<img src="img/dog-and-cat.png" alt="" width="220">
+                            <div class="form-divider"></div>
 
-							<div class="form-mini-divider"></div>
+                            <img src="img/dog-and-cat.png" alt="" width="220">
 
-							<h3 class="onboard">Let’s get started</h3>
+                            <div class="form-mini-divider"></div>
 
-							<p>미리 입력한 반려견 / 반려묘의 정보를 바탕으로 펫보험을 추천받아보세요!!</p>
+                            <h3 class="onboard">Let’s get started</h3>
 
-							<div><a href="insuranceByCollaborativeFiltering" class= "more-btn">나에게 맞는 펫보험 추천받기</a></div>
-				
-						</div>
-					</div>
-				</div>
-			</main>
-			<!-- Page content end -->
-		</div>
-	</div>
+                            <p>미리 입력한 반려견 / 반려묘의 정보를 바탕으로 펫보험을 추천받아보세요!!</p>
 
-	<!-- JQuery library file. requared all pages -->
-	<script src="js/jquery-3.2.1.min.js"></script>
+                            <div><a href="insuranceByCollaborativeFiltering" class="more-btn">나에게 맞는 펫보험 추천받기</a></div>
+                            <div><a href="test1" class="more-btn">test</a></div>
+                            <div><a href="test2" class="more-btn">test2</a></div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+            <!-- Page content end -->
+        </div>
+    </div>
 
-	<!-- Turbo slider plugin file. requared only wizard pages -->
-	<script src="plugins/turbo-slider/turbo.min.js"></script>
+    <!-- JQuery library file. requared all pages -->
+    <script src="js/jquery-3.2.1.min.js"></script>
 
-	<!-- Template global script file. requared all pages -->
-	<script src="js/global.script.js"></script>
+    <!-- Turbo slider plugin file. requared only wizard pages -->
+    <script src="plugins/turbo-slider/turbo.min.js"></script>
+
+    <!-- Template global script file. requared all pages -->
+    <script src="js/global.script.js"></script>
 
 </body>
+
 </html>
