css : Label bold

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -41,6 +41,11 @@
 ***/
 
 
+.keyword {
+    font-weight: bold;
+}
+
+
 /*-------------------------------------------------------------------
 [1. Body]
 *------------------------------------------------------------------*/
