Header Css 수정 - back arrow 및 page title

--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+    <header>
+        <!-- extra class no-background -->
+        <h1 class="page-title">댕냥댕냥</h1>
+        <a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
+    </header>
 
     <div class="card">
         <div class="multi-image">
