--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -62,6 +62,43 @@ body {
 
 
 /*-------------------------------------------------------------------
+[5. header]
+*------------------------------------------------------------------*/
+
+.go-back-link {
+    grid-area: pre-arrow;
+    width: 120px;
+    height: 50px;
+    color: white;
+    font-size: 100px;
+    display: inline-block;
+    line-height: 0px;
+    text-align: center;
+    /* float: left; */
+    /* margin-left: -10px; */
+    margin-bottom: 100px;
+}
+
+header .page-title {
+    font-size: 16px;
+    position: absolute;
+    left: 50px;
+    right: 50px;
+    top: 10px;
+    margin: 0;
+    padding: 0;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    letter-spacing: 2px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+/*-------------------------------------------------------------------
 [33. Card]
 *------------------------------------------------------------------*/
 
