--- a/views/insuranceByCollaborativeFiltering.ejs
+++ b/views/insuranceByCollaborativeFiltering.ejs
@@ -18,14 +18,14 @@
         <div class="row mbr-justify-content-center">
             <div class="col-lg-12 mbr-col-md-10">
                 <h3 class="entry-title">펫보험 비교보기</h3>
-                <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다. 가입전 반드시 실제 보험료와 약관을 확인하시기
-                    바랍니다.</p>
+                <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다. 가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.
+                </p>
             </div>
             <div class="col-lg-12 mbr-col-md-10">
                 <div class="mypet">
                     <div class="text-wrap vcenter">
-                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">(1)살 (말티즈)를 키우는 다른 분들은 이런 보험을
-                            선택하셨습니다.</h2>
+                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">(1)살 (말티즈)를 키우는 다른 분들은 이런 보험을 선택하셨습니다.
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -33,7 +33,8 @@
                 <div class="wrap">
                     <div class="insurance-icon"><img src="img/db.png" alt="" width="220"></div>
                     <div class="text-wrap vcenter">
-                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">프로미 반려동물보험</span></h2>
+                        <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">프로미 반려동물보험</span>
+                        </h2>
                         <a href="#" class="button">자세히</a>
                         <a href="#" class="button">가입</a>
                     </div>
@@ -88,7 +89,7 @@
     $.ajax({
         url: "/insuranceByCollaborativeFiltering",
         type: "POST",
-        success: function (data) {
+        success: function(data) {
             console.log(data);
             for (var i in data) {
                 console.log('고객님과 유사한 고객님들의 ', data.indexOf(data[i]) + 1, '순위 보험 선택은 ', data[i], '입니다.');
