--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -13,9 +13,7 @@
         <a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
     </header>
 
-    <div class="card">
-        <div class="multi-image">
-            <img src="img/pet1.png" alt="" width="220">
+    <div class="container">
         </div>
         <div class="card-image"></div>
         <div class="card-text">
@@ -31,6 +29,7 @@
             <div class="stat border">
                 <div class="value">5123</div>
                 <div class="type">views</div>
+        <div class="cards">
             </div>
             <div class="stat">
                 <div class="value">32</div>
