top & button content 수정 - 내용, 위치, 여백 설정

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -41,6 +41,25 @@
 ***/
 
 
+/*-------------------------------------------------------------------
+[0. Reset and Set Defaults]
+*------------------------------------------------------------------*/
+
+.top-content {
+    grid-area: top-content;
+}
+
+.top-content h3,
+.top-content p,
+.botton-content h1,
+.botton-content {
+    color: gray;
+}
+
+.botton-content {
+    grid-area: botton-content;
+}
+
 .keyword {
     font-weight: bold;
 }
