--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -14,6 +14,10 @@
     </header>
 
     <div class="container">
+        <div class="top-content">
+            <h3 class="entry-title">펫보험 비교보기</h3>
+            <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다.</p>
+            <p>가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.</p>
         </div>
         <div class="card-image"></div>
         <div class="card-text">
@@ -85,6 +89,9 @@
                 <div class="value">15</div>
                 <div class="type">comments</div>
             </div>
+        <div class="botton-content">
+            <p> 마음에 들지 않는다면, 자신에게 맞는 펫보험을 <label class="keyword">키워드</label>로 직접 선택해보세요! </p>
+            <div><a href="insuranceByKeyword" class="more-btn float-right">키워드로 찾기</a></div>
         </div>
     </div>
 </body>
