--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -19,76 +19,61 @@
             <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다.</p>
             <p>가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.</p>
         </div>
-        <div class="card-image"></div>
-        <div class="card-text">
-            <span class="date">4 days ago</span>
-            <h2>Post One</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
-        </div>
-        <div class="card-stats">
-            <div class="stat">
-                <div class="value">4<sup>m</sup></div>
-                <div class="type">read</div>
-            </div>
-            <div class="stat border">
-                <div class="value">5123</div>
-                <div class="type">views</div>
         <div class="cards">
+            <div class="card">
+                <div class="multi-image">
+                    <img src="img/pet1.png" alt="" width="220">
+                </div>
+                <div class="card-image"> <img src="img/lotte.png"></div>
+                <div class="card-text">
+                    <span class="date">4 days ago</span>
+                    <h2>Post One</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae temporibus omnis illum maxime quod deserunt eligendi dolor</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="value">12 명</div>
+                        <div class="type">read</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="value">자세히</div>
+                        <div class="type">views</div>
+                    </div>
+                    <div class="stat">
+                        <div class="value">가입</div>
+                        <div class="type">comments</div>
+                    </div>
+                </div>
             </div>
-            <div class="stat">
-                <div class="value">32</div>
-                <div class="type">comments</div>
+            <div class="card">
+                <div class="multi-image2">
+                    <img src="img/pet2.png" alt="" width="220">
+                </div>
+                <div class="card-image card2"> <img src="img/db.png"> </div>
+                <div class="card-text card2">
+                    <span class="date">1 week ago</span>
+                    <h2>Post Two</h2>
+                    <p>Adipisicing elit. Ducimus, repudiandae corrupti amet temporibus omnis provident illum maxime quod. Lorem ipsum dolor</p>
+                </div>
+                <div class="card-stats card2">
+                    <div class="stat">
+                        <div class="value">7 명</div>
+                        <div class="type">read</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="value">자세히</div>
+                        <div class="type">views</div>
+                    </div>
+                    <div class="stat">
+                        <div class="value">가입</div>
+                        <div class="type">comments</div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="multi-image2">
-            <img src="img/pet2.png" alt="" width="220">
+        <div class="icon">
+            <div class="arrow"></div>
         </div>
-        <div class="card-image card2"></div>
-        <div class="card-text card2">
-            <span class="date">1 week ago</span>
-            <h2>Post Two</h2>
-            <p>Adipisicing elit. Ducimus, repudiandae corrupti amet temporibus omnis provident illum maxime quod. Lorem ipsum dolor</p>
-        </div>
-        <div class="card-stats card2">
-            <div class="stat">
-                <div class="value">7<sup>m</sup></div>
-                <div class="type">read</div>
-            </div>
-            <div class="stat border">
-                <div class="value">7152</div>
-                <div class="type">views</div>
-            </div>
-            <div class="stat">
-                <div class="value">21</div>
-                <div class="type">comments</div>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="multi-image3">
-            <img src="img/pet3.png" alt="" width="220">
-        </div>
-        <div class="card-image card3"></div>
-        <div class="card-text card3">
-            <span class="date">3 week ago</span>
-            <h2>Post Three</h2>
-            <p>Repudiandae corrupti amet temporibus omnis provident illum maxime. Ducimus, lorem ipsum dolor adipisicing elit</p>
-        </div>
-        <div class="card-stats card3">
-            <div class="stat">
-                <div class="value">5<sup>m</sup></div>
-                <div class="type">read</div>
-            </div>
-            <div class="stat border">
-                <div class="value">3021</div>
-                <div class="type">views</div>
-            </div>
-            <div class="stat">
-                <div class="value">15</div>
-                <div class="type">comments</div>
-            </div>
         <div class="botton-content">
             <p> 마음에 들지 않는다면, 자신에게 맞는 펫보험을 <label class="keyword">키워드</label>로 직접 선택해보세요! </p>
             <div><a href="insuranceByKeyword" class="more-btn float-right">키워드로 찾기</a></div>
