--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -11,10 +11,10 @@
     <header>
         <!-- extra class no-background -->
         <h1 class="page-title">댕냥댕냥</h1>
-        <a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
     </header>
 
     <div class="container">
+
         <div class="top-content">
             <h3 class="entry-title">펫보험 비교보기</h3>
             <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다.</p>
@@ -72,12 +72,15 @@
                 </div>
             </div>
         </div>
-        <div class="icon">
-            <div class="arrow"></div>
-        </div>
+        <a href="insuranceByKeyword">
+            <div class="next-icon">
+                <div class="next-arrow"></div>
+            </div>
+        </a>
         <div class="botton-content">
-            <p> 마음에 들지 않는다면, 자신에게 맞는 펫보험을 <label class="keyword">키워드</label>로 직접 선택해보세요! </p>
-            <div><a href="insuranceByKeyword" class="more-btn float-right">키워드로 찾기</a></div>
+            <p> 마음에 들지 않는다면, 자신에게 맞는 펫보험을
+                <a href="insuranceByKeyword"> <label class="keyword">키워드</label></a>로 직접 선택해보세요!
+            </p>
         </div>
     </div>
 
