prev arrow(이전화면으로 이동) 완성 - 기능 추가

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -365,3 +365,49 @@ header .page-title {
     box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
     transform: rotate(-45deg);
 }
+
+
+/*-------------------------------------------------------------------
+[35. Prev Arrow]
+*------------------------------------------------------------------*/
+
+.prev-icon {
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    height: 60px;
+    cursor: pointer;
+}
+
+.prev-arrow {
+    position: absolute;
+    top: 25px;
+    width: 90%;
+    height: 10px;
+    background-color: #fff;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+    animation: arrow 700ms linear infinite;
+}
+
+.prev-arrow::after,
+.prev-arrow::before {
+    content: '';
+    position: absolute;
+    width: 60%;
+    height: 10px;
+    left: -8px;
+    background-color: #fff;
+}
+
+.prev-arrow::after {
+    top: -12px;
+    transform: rotate(-45deg);
+}
+
+.prev-arrow::before {
+    top: 12px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+    transform: rotate(45deg);
+}
