--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -14,7 +14,11 @@
     </header>
 
     <div class="container">
-
+        <a href="javascript:history.back();">
+            <div class="prev-icon">
+                <div class="prev-arrow"></div>
+            </div>
+        </a>
         <div class="top-content">
             <h3 class="entry-title">펫보험 비교보기</h3>
             <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다.</p>
