사용자 정보(강아지 나이와 품종) 출력 및 Label 효과

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -60,8 +60,10 @@
     grid-area: botton-content;
 }
 
-.keyword {
+.keyword,
+label {
     font-weight: bold;
+    color: rgb(75, 15, 128);
 }
 
 a {
