--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -21,8 +21,9 @@
         </a>
         <div class="top-content">
             <h3 class="entry-title">펫보험 비교보기</h3>
-            <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다.</p>
+            <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생할 수 있습니다.</p>
             <p>가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.</p>
+            <p><label>1</label>살 <label>말티즈</label> 를 키우는 다른 분들은 이런 <label>보험</label>을 선택하셨습니다.</p>
         </div>
         <div class="cards">
             <div class="card">
@@ -38,7 +39,7 @@
                 <div class="card-stats">
                     <div class="stat">
                         <div class="value">12 명</div>
-                        <div class="type">read</div>
+                        <div class="type">peple</div>
                     </div>
                     <div class="stat border">
                         <div class="value">자세히</div>
@@ -46,7 +47,7 @@
                     </div>
                     <div class="stat">
                         <div class="value">가입</div>
-                        <div class="type">comments</div>
+                        <div class="type">buy</div>
                     </div>
                 </div>
             </div>
@@ -63,7 +64,7 @@
                 <div class="card-stats card2">
                     <div class="stat">
                         <div class="value">7 명</div>
-                        <div class="type">read</div>
+                        <div class="type">peple</div>
                     </div>
                     <div class="stat border">
                         <div class="value">자세히</div>
@@ -71,7 +72,7 @@
                     </div>
                     <div class="stat">
                         <div class="value">가입</div>
-                        <div class="type">comments</div>
+                        <div class="type">buy</div>
                     </div>
                 </div>
             </div>
