naming 변경 style.css -> insurance.css

--- a/views/insuranceByKeyword.ejs
+++ b/views/insuranceByKeyword.ejs
@@ -1,178 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
-		
-		<title>Insurance | Insurances type</title>
 
-		<!-- Loading third party fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|" rel="stylesheet" type="text/css">
-		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
-		<link href="fonts/lineo-icon/style.css" rel="stylesheet" type="text/css">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-		<!-- Loading main css file -->
-		<link rel="stylesheet" href="css/style.css">
-		
-		<!--[if lt IE 9]>
-		<script src="js/ie-support/html5.js"></script>
-		<script src="js/ie-support/respond.js"></script>
-		<![endif]-->
+    <title>Insurance | Insurances type</title>
 
-	</head>
+    <!-- Loading third party fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|" rel="stylesheet" type="text/css">
+    <link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="fonts/lineo-icon/style.css" rel="stylesheet" type="text/css">
 
-	<body>
-		
-		<div id="site-content">
-			<header> <!-- extra class no-background -->
-				<a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
-				<h1 class="page-title">댕냥댕냥</h1>
-			</header>
-			
-			<main class="main-content">
-				<div class="page">
-					<div class="container">
-						<h3 class="entry-title">펫보험 비교보기</h3>
-						<p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다. 가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.</p>
+    <!-- Loading main css file -->
+    <link rel="stylesheet" href="css/insurance.css">
 
-						<div class="filter-links filterable-nav">
-							<strong>Select Category: </strong>
-							<a href="#" class="current wow fadeInRight" data-filter="*" >전체</a>
-							<a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a">가장 싼</a>
-							<a href="#" class="wow fadeInRight" data-wow-delay=".4s" data-filter=".b">동물 미 등록</a>
-							<a href="#" class="wow fadeInRight" data-wow-delay=".6s" data-filter=".c">장례비 지원</a>
-						</div>
+</head>
 
-						<div class="filterable-items">
+<body>
 
-							<div class="insurance-item filterable-item a">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/carrot.png" alt="" width="220"></div>
-									<h3 class="insurance-title">스마트온펫산책보험</h3>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>
-								</div>
-							</div>
+    <div id="site-content">
+        <header>
+            <!-- extra class no-background -->
+            <a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
+            <h1 class="page-title">댕냥댕냥</h1>
+        </header>
 
-							<div class="insurance-item filterable-item b && c">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/db.png" alt="" width="220"></div>
-									<h3 class="insurance-title">프로미 반려동물보험</h3>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(입원) 15만원</p>
-									<p>치료비(통원) 15만원</p>
-									<p>배상책임 500만원</p>
-									<p>사망시위로금 15만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>
-								</div>
-							</div>
+        <main class="main-content">
+            <div class="page">
+                <div class="container">
+                    <h3 class="entry-title">펫보험 비교보기</h3>
+                    <p>[필독!] 아래 보험사별 보험료와 보상조건 등은 고객의 이해를 돕기 위해 제공하는 것으로 보험가입시 차이가 발생항 수 있습니다. 가입전 반드시 실제 보험료와 약관을 확인하시기 바랍니다.</p>
 
-							<div class="insurance-item filterable-item a && b">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/nh.png" alt="" width="220"></div>
-									<h3 class="insurance-title">반려동물장제비보험</h3>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>
-								</div>
-							</div>
+                    <div class="filter-links filterable-nav">
+                        <strong>Select Category: </strong>
+                        <a href="#" class="current wow fadeInRight" data-filter="*">전체</a>
+                        <a href="#" class="wow fadeInRight" data-wow-delay=".2s" data-filter=".a">가장 싼</a>
+                        <a href="#" class="wow fadeInRight" data-wow-delay=".4s" data-filter=".b">동물 미 등록</a>
+                        <a href="#" class="wow fadeInRight" data-wow-delay=".6s" data-filter=".c">장례비 지원</a>
+                    </div>
 
-							<div class="insurance-item filterable-item c && a">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/hanwha.png" alt="" width="220"></div>
-									<h3 class="insurance-title">펫플러스</h3>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>
-								</div>
-							</div>
+                    <div class="filterable-items">
 
-							<div class="insurance-item filterable-item a">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/meritz.png" alt="" width="220"></div>
-									<h3 class="insurance-title">페퍼민츠</h3>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>
-								</div>
-							</div>
+                        <div class="insurance-item filterable-item a">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/carrot.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">스마트온펫산책보험</h3>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
 
-							<div class="insurance-item filterable-item a">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/kb.png" alt="" width="220"></div>
-									<h3 class="insurance-title">KB 펫코노미 보험</h3>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>
-								</div>
-							</div>
+                        <div class="insurance-item filterable-item b && c">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/db.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">프로미 반려동물보험</h3>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(입원) 15만원</p>
+                                <p>치료비(통원) 15만원</p>
+                                <p>배상책임 500만원</p>
+                                <p>사망시위로금 15만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
 
-							<div class="insurance-item filterable-item c">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/samsung.png" alt="" width="220"></div>
-									<h3 class="insurance-title">애니펫</h3>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(입원) 10만원</p>
-									<p>장례비지원비 15만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>
-								</div>
-							</div>
+                        <div class="insurance-item filterable-item a && b">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/nh.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">반려동물장제비보험</h3>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
 
-							<div class="insurance-item filterable-item c">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/lotte.png" alt="" width="220"></div>
-									<h3 class="insurance-title">롯데마이펫보험</h3>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(입원) 10만원</p>
-									<p>배상책임 500만원</p>
-									<p>장례비지원비 15만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>
-									</div>
-							</div>
+                        <div class="insurance-item filterable-item c && a">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/hanwha.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">펫플러스</h3>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
 
-							<div class="insurance-item filterable-item b">
-								<div class="insurance-content">
-									<div class="insurance-icon"><img src="img/hyundai.png" alt="" width="220"></div>
-									<h3 class="insurance-title">하이펫 애견보험</h3>
-									<p>애견 배상책임 500만원</p>
-									<p>애견장례비 15만원</p>
-									<p>치료비(수술) 150만원</p>
-									<p>치료비(수술) 150만원</p>
-									<a href="#" class="button">자세히</a>
-									<a href="#" class="button">가입</a>	
-								</div>
-							</div>
-						</div>
-					</div>
-				</div> <!-- .page -->
-			</main>
+                        <div class="insurance-item filterable-item a">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/meritz.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">페퍼민츠</h3>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
 
-		</div>
+                        <div class="insurance-item filterable-item a">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/kb.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">KB 펫코노미 보험</h3>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
 
-		<script src="js/jquery-1.11.1.min.js"></script>
-		<script src="js/plugins.js"></script>
-		<script src="js/app.js"></script>
-		
-	</body>
+                        <div class="insurance-item filterable-item c">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/samsung.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">애니펫</h3>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(입원) 10만원</p>
+                                <p>장례비지원비 15만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
+
+                        <div class="insurance-item filterable-item c">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/lotte.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">롯데마이펫보험</h3>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(입원) 10만원</p>
+                                <p>배상책임 500만원</p>
+                                <p>장례비지원비 15만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
+
+                        <div class="insurance-item filterable-item b">
+                            <div class="insurance-content">
+                                <div class="insurance-icon"><img src="img/hyundai.png" alt="" width="220"></div>
+                                <h3 class="insurance-title">하이펫 애견보험</h3>
+                                <p>애견 배상책임 500만원</p>
+                                <p>애견장례비 15만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <p>치료비(수술) 150만원</p>
+                                <a href="#" class="button">자세히</a>
+                                <a href="#" class="button">가입</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- .page -->
+        </main>
+
+    </div>
+
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/app.js"></script>
+
+</body>
 
 </html>
