--- a/views/test2.ejs
+++ b/views/test2.ejs
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="css/insuranceByCollabo.css" />
+    <title>Insurance | 펫보험 유사도 비교</title>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
